Fix extra white space by altering meta tag

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
+* {
+box-sizing: border-box;
+}
 html, body {
   max-width: 100%;
   overflow-x: hidden;
+  background-color: brown;
 }
 #home,
 #projects,
